fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ section {
   flex-direction: row;
   flex-wrap: wrap;
   overflow-y: auto;
+  align-content: center;
 
   padding: 40px 50px 40px 50px;
   
@@ -52,6 +53,7 @@ section {
 img {
   padding-bottom: 10px;
   justify-items: center;
+  align-items: center;
   width: 10vh;
   height: 60vh;
  
